--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(parser)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(parser src/main.cpp)
+add_executable(parser src/main.cpp src/solver.h src/AST/node.h src/AST/evaluateAST.h src/Parser/parser.cpp src/Parser/parser.h)
